# theIronUtility

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RUN_MONOPOLY_APP.bat  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  shell.bash
.github/workflows/: ci.yml  release.yml
Shell_scripts/: the.bash
configs/: config.yaml
configs/data/: default.yaml
configs/eval/: default.yaml
configs/export/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
data/processed/squat_form/: labels.csv  subject_metadata.csv
data/raw/: .dvcignore  placeholder.txt
data/raw_simulated_keypoints/: labels.csv
data/raw_simulated_keypoints/subject_000/: clip_000_rep_00.npy  clip_000_rep_01.npy  clip_000_rep_02.npy  clip_000_rep_03.npy  clip_000_rep_04.npy
data/raw_simulated_keypoints/subject_001/: clip_001_rep_00.npy  clip_001_rep_01.npy  clip_001_rep_02.npy  clip_001_rep_03.npy  clip_001_rep_04.npy
data/raw_simulated_keypoints/subject_002/: clip_002_rep_00.npy  clip_002_rep_01.npy  clip_002_rep_02.npy  clip_002_rep_03.npy  clip_002_rep_04.npy
data/splits/: test_subjects.txt  train_subjects.txt  val_subjects.txt
docs/: DATA_CARD.md  DEPENDENCIES.md  EVALUATION.md  METHOD_OVERRIDES.md  MODEL_CARD.md
frontend/: squat_tracker.py
mlruns/289042135037019832/: meta.yaml
project/: ErrorDetector.js  RepCounter.js  UIManager.js  ai-core.js  api.js  formChecker.js  index.html  media.js  utils.js
project/AI training modules/: squat.js
resource_Examples/: UIManager.js  ai-core.js  formChecker.js  index.html  media.js  style.css
scripts/: evaluate.py  export.py  prepare_data.py  train.py
src/data/: components.py  datasets.py
src/eval/: metrics.py
src/models/: form_classifier.py
src/the_iron_utility.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/train/: trainer.py
tests/unit/: test_data_components.py  test_data_datasets.py
(+87 files in other folders)
